Added chanegs for logging