@@ -3,9 +3,12 @@ package com.chatapp.synk.controller;
 import com.chatapp.synk.dto.UserDTO;
 import com.chatapp.synk.response.SuccessResponse;
 import com.chatapp.synk.service.UserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -13,47 +16,75 @@ import java.util.Optional;
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
+
+    //Basic Setup with SLF4J logger
+    private static final Logger logger = LoggerFactory.getLogger(UserController.class);
+
     @Autowired
     private UserService userService;
 
     @GetMapping("/search")
     public ResponseEntity<SuccessResponse<UserDTO>> searchUsers(@RequestParam(required = false) String query) {
-        // ?query=abhi or ?query=9953313628
+        logger.info("Received search request with query: {}", query);
+
         List<UserDTO> results = userService.searchUsers(query);
+        if (results.isEmpty()) {
+            logger.warn("No users found for query: {}", query);
+        } else {
+            logger.info("Found {} users for query: {}", results.size(), query);
+        }
+
         String msg = results.isEmpty() ? "No matching users found" : "Search results";
         String code = results.isEmpty() ? "204" : "200";
 
-        return ResponseEntity.ok(
-                new SuccessResponse<>(code, msg, results)
-        );
+        return ResponseEntity.ok(new SuccessResponse<>(code, msg, results));
     }
-
 
     @GetMapping("/{id}")
     public ResponseEntity<SuccessResponse<UserDTO>> getUserById(@PathVariable String id) {
+        logger.info("Fetching user with ID: {}", id);
+
         Optional<UserDTO> userOpt = userService.getUserById(id);
-        return userOpt.map(user ->
-                ResponseEntity.ok(new SuccessResponse<>("200", "User fetched", List.of(user)))
-        ).orElse(ResponseEntity.ok(new SuccessResponse<>("404", "User not found", Collections.emptyList())));
+        if (userOpt.isPresent()) {
+            logger.info("User with ID {} found", id);
+            return ResponseEntity.ok(new SuccessResponse<>("200", "User fetched", List.of(userOpt.get())));
+        } else {
+            logger.warn("User with ID {} not found", id);
+            return ResponseEntity.ok(new SuccessResponse<>("404", "User not found", Collections.emptyList()));
+        }
     }
 
     @GetMapping("/phone/{phoneNumber}")
     public ResponseEntity<SuccessResponse<UserDTO>> getUserByPhoneNumber(@PathVariable String phoneNumber) {
+        logger.info("Fetching user with phone number: {}", phoneNumber);
+
         Optional<UserDTO> userOpt = userService.getUserByPhoneNumber(phoneNumber);
-        return userOpt.map(user ->
-                ResponseEntity.ok(new SuccessResponse<>("200", "User fetched", List.of(user)))
-        ).orElse(ResponseEntity.ok(new SuccessResponse<>("404", "User not found", Collections.emptyList())));
+        if (userOpt.isPresent()) {
+            logger.info("User with phone {} found", phoneNumber);
+            return ResponseEntity.ok(new SuccessResponse<>("200", "User fetched", List.of(userOpt.get())));
+        } else {
+            logger.warn("User with phone {} not found", phoneNumber);
+            return ResponseEntity.ok(new SuccessResponse<>("404", "User not found", Collections.emptyList()));
+        }
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<SuccessResponse<UserDTO>> updateUser(@PathVariable String id,@RequestBody UserDTO userDTO) {
+    public ResponseEntity<SuccessResponse<UserDTO>> updateUser(@PathVariable String id, @RequestBody UserDTO userDTO) {
+        logger.info("Received update request for user ID: {}", id);
+
         UserDTO updatedUser = userService.updateUser(id, userDTO);
+        logger.info("User ID {} updated successfully", id);
+
         return ResponseEntity.ok(new SuccessResponse<>("200", "User updated successfully", List.of(updatedUser)));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<SuccessResponse<Void>> deleteUser(@PathVariable String id) {
+        logger.info("Received delete request for user ID: {}", id);
+
         userService.deleteUser(id);
+        logger.info("User ID {} deleted successfully", id);
+
         return ResponseEntity.ok(new SuccessResponse<>("200", "User deleted successfully", Collections.emptyList()));
     }
 }
